--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
 
     //libreria de Google
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
 }
